--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,8 @@
-{% extends 'MorenwareDutilsBundle:Default:base.html.twig' %}
+{% extends 'MorenwareDutilsBundle::base.html.twig' %}
 
 {% block body %}
 
-Hello {{ name }}!
+Hello Moto!
 
 {% endblock %}
 
