Temporary workaround to make the font work

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -15,12 +15,11 @@
       	  	'@bootstrap_css'
     		'@MorenwareDutilsBundle/Resources/public/css/plugins/metisMenu/metisMenu.css'
     		'@MorenwareDutilsBundle/Resources/public/css/sb-admin-2.css'
-    		'@MorenwareDutilsBundle/Resources/public/font-awesome-4.1.0/fonts/*.ttf'
-    		'@MorenwareDutilsBundle/Resources/public/font-awesome-4.1.0/css/font-awesome.css'	
-    	
 		   %}
       	
-            <link href="{{ asset_url }}" rel="stylesheet" />
+      	    <link href="{{ asset_url }}" rel="stylesheet" />        
+            <link href="{{ asset('client/font-awesome-4.1.0/css/font-awesome.min.css') }}" rel="stylesheet" />
+            
             
           {% endstylesheets %}   
             
