Setup for frontend changes detection with guard, rake, livereload. Coffeescript compilation and change linter is done through webpack.

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -165,10 +165,11 @@
 		    '@jquery'
 			'@bootstrap_js'
 	        '@MorenwareDutilsBundle/Resources/public/js/plugins/metisMenu/metisMenu.min.js'
-	        '@MorenwareDutilsBundle/Resources/public/js/sb-admin-2.js'  %}
+	        '@MorenwareDutilsBundle/Resources/public/js/sb-admin-2.js'
+	        '@MorenwareDutilsBundle/Resources/public/js/app/*'  %}
 	            <script type="text/javascript" src="{{ asset_url }}"></script>
 	    {%  endjavascripts %} 
-    
+	   
     {% endblock %}
 
 </html>
