--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -253,7 +253,8 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
+                            
+                            <a href="#/instances"><i class="fa fa-table fa-fw"></i>Instance</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
