Added nfs setup script. Starting with feeds configuration

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -27,6 +27,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
+                                
                                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
                             </a>
                         </li>
@@ -255,6 +256,10 @@
                         <li>
                             
                             <a href="#/instances"><i class="fa fa-table fa-fw"></i>Instance</a>
+                        </li>
+                         <li>
+                            
+                            <a href="#/feeds"><i class="fa fa-table fa-fw"></i>Feeds</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
