General tidy up to start with commits

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'MorenwareDutilsBundle::base.html.twig' %}
 
 {% block body %}
-
-<div id="hey" ng-view>
+<div id="angular-wrapper" ng-view>
+Hello
 </div>
 
 {% endblock %}
