--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -15,13 +15,14 @@
       	  	'@bootstrap_css'
     		'@MorenwareDutilsBundle/Resources/public/css/plugins/metisMenu/metisMenu.css'
     		'@MorenwareDutilsBundle/Resources/public/css/sb-admin-2.css'
+    		'@MorenwareDutilsBundle/Resources/public/css/main.css'
 		   %}
       	
       	    <link href="{{ asset_url }}" rel="stylesheet" />        
-            <link href="{{ asset('client/font-awesome-4.1.0/css/font-awesome.min.css') }}" rel="stylesheet" />
-            
             
           {% endstylesheets %}   
+          
+          <link href="{{ asset('client/font-awesome-4.1.0/css/font-awesome.min.css') }}" rel="stylesheet" />
             
         {% endblock %}
 
@@ -40,147 +41,20 @@
 		{% include 'MorenwareDutilsBundle::nav.html.twig' %}
 		
         <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">Panel</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-            
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Main Content
-                            <div class="pull-right">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                        Actions
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu pull-right" role="menu">
-                                        <li><a href="#">Action</a>
-                                        </li>
-                                        <li><a href="#">Another action</a>
-                                        </li>
-                                        <li><a href="#">Something else here</a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.panel-heading -->
-                         <div class="panel-body">
-                           {% block body %}{% endblock %}
-                        </div>
-                         
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-         
-    
-                </div>
-                <!-- /.col-lg-8 -->
-                <div class="col-lg-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-bell fa-fw"></i> Notifications Panel
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="list-group">
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
-                                    <span class="pull-right text-muted small"><em>4 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small"><em>12 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                    <span class="pull-right text-muted small"><em>27 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-tasks fa-fw"></i> New Task
-                                    <span class="pull-right text-muted small"><em>43 minutes ago</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small"><em>11:32 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-bolt fa-fw"></i> Server Crashed!
-                                    <span class="pull-right text-muted small"><em>11:13 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-warning fa-fw"></i> Server Not Responding
-                                    <span class="pull-right text-muted small"><em>10:57 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-                                    <span class="pull-right text-muted small"><em>9:49 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-money fa-fw"></i> Payment Received
-                                    <span class="pull-right text-muted small"><em>Yesterday</em>
-                                    </span>
-                                </a>
-                            </div>
-                            <!-- /.list-group -->
-                            <a href="#" class="btn btn-default btn-block">View All Alerts</a>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-     
-                    </div>
-                    <!-- /.panel .chat-panel -->
-                </div>
-                <!-- /.col-lg-4 -->
-            </div>
-            <!-- /.row -->
+      		  {% block body %}{% endblock %}
         </div>
         <!-- /#page-wrapper -->
-
     </div>
     <!-- /#wrapper -->
 
     {% block javascripts  %}
-        
-	    {% javascripts 
-		    '@jquery'
-			'@bootstrap_js'
-	        '@MorenwareDutilsBundle/Resources/public/js/plugins/metisMenu/metisMenu.min.js'
-	        '@MorenwareDutilsBundle/Resources/public/js/sb-admin-2.js'
-	          %}
-	            <script type="text/javascript" src="{{ asset_url }}"></script>
-	    {%  endjavascripts %} 
-	    
-	    <script type="text/javascript" src="{{ asset('client/js/lib/angular.min.js') }}"></script>
-	    <script type="text/javascript" src="{{ asset('client/js/lib/angular-route.min.js') }}"></script>
-
-	    {% javascripts output="init.js"
-	        '@MorenwareDutilsBundle/Resources/public/js/app/init.js'
-	          %}
-	            <script type="text/javascript" src="{{ asset_url }}"></script>
-	    {%  endjavascripts %} 
-	    
-	    
-	   
+       
+	    <script type="text/javascript" src="{{ asset('client/js/lib/jquery.js') }}"></script>
+	    <script type="text/javascript" src="{{ asset('client/js/lib/bootstrap.min.js') }}"></script>
+	    <script type="text/javascript" src="{{ asset('client/js/plugins/metisMenu/metisMenu.min.js') }}"></script>
+	    <script type="text/javascript" src="{{ asset('client/js/sb-admin-2.js') }}"></script>
+		
+		<script type="text/javascript" src="{{ asset('client/js/app/init.js') }}"></script>
 	   
     {% endblock %}
 
