#13 Starting with transmission workflow to complete feed checking

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -69,7 +69,7 @@
                         </li>
                          <li>
 
-                            <a href="#/feeds"><i class="fa fa-table fa-fw"></i>Feeds</a>
+                            <a href="feeds"><i class="fa fa-table fa-fw"></i>Feeds</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
