More additions and changes previous

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm.html
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm.html
@@ -1,15 +1,15 @@
 
   <div class="col-lg-12">
-    <h3>{{title}}</h3>
+    <h3>{{formTitle}}</h3>
     <div ng-repeat="field in fields" class="row">
       <div class="form-group col-lg-4">
         <label for="{{field.name}}" class="control-label">{{field.name}}</label>
-        <input type="text" ng-model="field.value" class="form-control" id="{{field.value}}" placeholder="{{field.placeholder}}"/>
+        <input type="text" ng-model="field.value" class="form-control" id="{{field.name}}" placeholder="{{field.placeholder}}"/>
       </div>
     </div>
     <div class="row">
       <div class="form-group">
-        <button class="btn" ng-click="save()">{{submitText}}</button>
+        <button class="btn" ng-click="action()">{{submitText}}</button>
       </div>
     </div>
 
