Initial version of basic search engine for EliteTorrent and DivXTotal websites

--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/base.html.twig
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="dutilsApp">
-   
+<head>   
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,11 +11,16 @@
     
       	{% block stylesheets %}
       	
-          <link href="{{ asset('client/css/bootstrap.min.css') }}" rel="stylesheet" />
-          <link href="{{ asset('client/css/metis-menu.css') }}" rel="stylesheet" />
-          <link href="{{ asset('client/css/sb-admin-2.css') }}" rel="stylesheet" />
-          <link href="{{ asset('client/css/main.css') }}" rel="stylesheet" />
-          <link href="{{ asset('client/font-awesome-4.1.0/css/font-awesome.min.css') }}" rel="stylesheet" />
+          <link href="client/css/bootstrap.min.css" rel="stylesheet" />
+          <link href="client/css/metis-menu.css" rel="stylesheet" />
+          <link href="client/css/sb-admin-2.css" rel="stylesheet" />
+          <link href="client/css/main.css" rel="stylesheet" />
+          <link href="client/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+
+{#           <link href="{{ asset('client/css/metis-menu.css') }}" rel="stylesheet" />#}
+{#           <link href="{{ asset('client/css/sb-admin-2.css') }}" rel="stylesheet" />#}
+{#           <link href="{{ asset('client/css/main.css') }}" rel="stylesheet" />#}
+{#           <link href="{{ asset('client/font-awesome-4.1.0/css/font-awesome.min.css') }}" rel="stylesheet" />#}
             
         {% endblock %}
 
@@ -42,13 +47,21 @@
 
     {% block javascripts  %}
        
-	    <script type="text/javascript" src="{{ asset('client/js/lib/jquery.js') }}"></script>
-	    <script type="text/javascript" src="{{ asset('client/js/lib/bootstrap.min.js') }}"></script>
-	    <script type="text/javascript" src="{{ asset('client/js/plugins/metisMenu/metisMenu.min.js') }}"></script>
-	    <script type="text/javascript" src="{{ asset('client/js/sb-admin-2.js') }}"></script>
+{# 	    <script type="text/javascript" src="{{ asset('client/js/lib/jquery.js') }}"></script>#}
+{# 	    <script type="text/javascript" src="{{ asset('client/js/lib/bootstrap.min.js') }}"></script>#}
+{# 	    <script type="text/javascript" src="{{ asset('client/js/plugins/metisMenu/metisMenu.min.js') }}"></script>#}
+{# 	    <script type="text/javascript" src="{{ asset('client/js/sb-admin-2.js') }}"></script>#}
 		
-		<script type="text/javascript" src="{{ asset('client/js/app/init.js') }}"></script>
-	   
+{# 		<script type="text/javascript" src="{{ asset('client/js/app/init.js') }}"></script>#}
+		
+		
+	    <script type="text/javascript" src="client/js/lib/jquery.js"></script>
+	    <script type="text/javascript" src="client/js/lib/bootstrap.min.js"></script>
+	    <script type="text/javascript" src="client/js/plugins/metisMenu/metisMenu.min.js"></script>
+	    <script type="text/javascript" src="client/js/sb-admin-2.js"></script>
+		<script type="text/javascript" src="client/js/app/init.js"></script>
+		
+
     {% endblock %}
 
 </html>
