--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/nav.html.twig
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Download Utils</a>
+                <a class="navbar-brand" href="home">Download Utils</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -49,23 +49,12 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a class="active" href="search"><i class="fa fa-dashboard fa-fw"></i>Buscar</a>
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="flot.html">Flot Charts</a>
-                                </li>
-                                <li>
-                                    <a href="morris.html">Morris.js Charts</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
+                    
                         <li>
 
-                            <a href="#/instances"><i class="fa fa-table fa-fw"></i>Instance</a>
+                            <a href="instances"><i class="fa fa-table fa-fw"></i>Instance</a>
                         </li>
                          <li>
 
