--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm.html
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/client/app/components/adminForm.html
@@ -2,9 +2,23 @@
   <div class="col-lg-12">
     <h3>[[formTitle]]</h3>
     <div ng-repeat="field in fields" class="row">
+
       <div class="form-group col-lg-4">
-        <label for="{{field.name}}" class="control-label">{{field.label}}</label>
-        <input type="text" ng-model="field.value" class="form-control" id="{{field.name}}" placeholder="{{field.placeholder}}"/>
+
+      <div ng-switch on="field.type">
+        <div ng-switch-when="text">
+          <label for="{{field.name}}" class="control-label">{{field.label}}</label>
+          <input type="text" ng-model="field.value" class="form-control" id="{{field.name}}" placeholder="{{field.placeholder}}"/>
+        </div>
+        <div ng-switch-when="boolean">
+          <div class="checkbox">
+            <label for="{{field.name}}">
+              <input type="checkbox" ng-model="field.value" id="{{field.name}}" placeholder="{{field.placeholder}}"/> {{field.label}}
+            </label>
+          </div>
+        </div>
+      </div>
+
       </div>
     </div>
     <div class="row">
