--- a/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/feeds.html.twig
+++ b/server/dutils-server/src/Morenware/DutilsBundle/Resources/views/Default/feeds.html.twig
@@ -7,7 +7,7 @@
 	     <h1 class="page-header">Feeds</h1>
 	    </div>
 	</div>
-	<div class="row torrent-feeds">
+	<div class="row torrent-feeds" ng-show="!loading">
 	    <div class="col-lg-12">
 	        <div class="panel panel-default">
 	            <div class="panel-heading">Feeds List
@@ -30,6 +30,7 @@
 
 
 	<div class="row" ng-show="showFeedsForm">
+		<!-- TODO: The form title and submit text are strings, so they can be passed as '@' in the directive, evaluating them here as [[formTitle]] / [[submitText]] -->
 	    <admin-form title="formTitle" submit-text="submitText" submit-action="action()" fields="feedsFields"></admin-form>
 	</div>
 
