--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -9,7 +9,7 @@
 	     <h1 class="page-header">Buscar torrents</h1>
 	    </div>
 	</div>
-	
+
 	<div class="row search-form">
 		 <div class="input-group custom-search-form col-lg-12">
          	<input type="text" class="form-control" ng-model="query" placeholder="Buscar...">
@@ -17,32 +17,34 @@
               <button class="btn btn-default" type="button" ng-click="search()">
                 <i class="fa fa-search"></i>
               </button>
-              
+
 {#               <a class="btn btn-default" href="search?searchQuery=castle">#}
 {#               	 <i class="fa fa-search"></i>#}
 {#               </a>#}
-              
+
             </span>
          </div>
 	</div>
-	
+
 	<div class="row search-results" ng-show="searchFinished">
-	    <div class="col-lg-12">    
+	    <div class="col-lg-12">
 	                <h4>Resultados para: '[[query]]'</h4>
-	                <h5>[[offset]]-[[currentOffset - 1]] de [[total]]</h5>
+	                <h5>[[offset+1]]-[[currentOffset]] de [[total]]</h5>
                      <div class="table-responsive">
                         <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th>#</th>
                                     <th>Title</th>
+                                    <th>Date</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="torrent in torrents">
-                                    <td ng-bind="offset+$index"></td>
+                                    <td ng-bind="offset+$index+1"></td>
                                     <td ng-bind="torrent.torrentName"></td>
+                                    <td  ng-bind="torrent.date"></td>
                                     <td class="col-lg-6">
                                         <a ng-show="torrent.magnetLink" href="[[torrent.magnetLink]]" target="_blank" class="col-lg-3 magnet">Magnet</a>&nbsp;
                                         <a href="[[torrent.torrentFileLink]]" class="download-torrent" target="_blank" class="col-lg-3">Download</a>
@@ -51,9 +53,9 @@
                             </tbody>
                         </table>
                     </div>
-	
+
 		</div>
-		
-	</div>	
-		
+
+	</div>
+
 {% endblock %}
