--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -58,7 +58,7 @@
                                     <td ng-bind="torrent.torrentName"></td>
                                     <td ng-bind="torrent.date"></td>
                                     <td class="col-lg-6">
-                                        <a href="#" ng-click="startDownload(torrent)" target="_blank" class="col-lg-3">Start download</a>
+                                        <button ng-click="startDownload(torrent)" target="_blank" class="col-lg-3">Start download</button>
                                         <a href="[[torrent.torrentFileLink]]" target="_blank" class="col-lg-3">Torrent file</a>
                                     </td>
                                     <td> <span>[[torrent.state]]</span></td>
