Missing files in previous commit

--- a/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
+++ b/src/Morenware/DutilsBundle/Resources/views/Default/search.html.twig
@@ -54,15 +54,18 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="torrent in torrents">
+                                <tr ng-repeat="torrent in torrents track by $index">
                                     <td ng-bind="offset+$index+1"></td>
                                     <td ng-bind="torrent.torrentName"></td>
                                     <td ng-bind="torrent.date"></td>
                                     <td>[[torrent.state]]</td>
                                     <td class="col-lg-6">
-                                        <button ng-show="torrent.state == 'NEW'" ng-click="startDownload(torrent)" target="_blank" class="btn btn-sm btn-primary col-lg-2">Download</button>
+                                        <button ng-show="torrent.state == 'New'" ng-click="startDownload(torrent)" target="_blank" class="btn btn-sm btn-primary col-lg-2">Download</button>
+
+                                        <button ng-show="torrent.state == 'Downloading' || torrent.state == 'Download_completed'" ng-click="cancelDownload(torrent)" target="_blank" class="btn btn-sm btn-primary col-lg-2">Cancel</button>
 
                                         <a href="[[torrent.torrentFileLink]]" target="_blank" class="btn btn-sm btn-info col-lg-2">Torrent file</a>
+
                                     </td>
                                 </tr>
                             </tbody>
